CR Peter Selmeier

--- a/ui5-deploy.yaml
+++ b/ui5-deploy.yaml
@@ -18,7 +18,7 @@ builder:
           url: http://sap-s4x:443
         app:
           name: /SRAIL/WCQUEEXT
-          description: deploy from bas madieg
+          description: Manage Work Center Queue CC
           package: /SRAIL/PEO_WQMNG
           transport: S4XK901418
         exclude:
