--- a/.extconfig.json
+++ b/.extconfig.json
@@ -31,17 +31,17 @@
     "SerialHelpDialog": "MPE_WCQUE_MNGS1%2ffragments%2fSerialHelpDialog.fragment.xml"
   },
   "system": {
-    "name": "sap-s4x-100-http",
-    "proxyUrlPrefix": "/destinations/sap-s4x-100-http",
+    "name": "sap-s4d-100-http",
+    "proxyUrlPrefix": "/destinations/sap-s4d-100-http",
     "path": "/sap/bc/adt",
-    "url": "/destinations/sap-s4x-100-http/sap/bc/adt",
+    "url": "/destinations/sap-s4d-100-http/sap/bc/adt",
     "wattUsage": "odata_abap,ui5_execute_abap,dev_abap,bsp_execute_abap",
     "entryPath": "/sap/bc/adt",
     "additionalData": []
   },
   "minUI5Version": "1.90.2",
   "namespace": "i2d.mpe.wcqueue.manages1",
-  "parentResourceRootUrl": "/destinations/sap-s4x-100-http/sap/bc/ui5_ui5/sap/MPE_WCQUE_MNGS1",
+  "parentResourceRootUrl": "/destinations/sap-s4d-100-http/sap/bc/ui5_ui5/sap/MPE_WCQUE_MNGS1",
   "resourceBundle": "i18n/i18n.properties",
   "shouldLinkComponentToManifest": true
 }
